--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,10 +54,10 @@ $color-institucional: #ff8f00
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #3F41CE
-$color-secundario: #77C9D2
-$color-acento-contenido: #70D6FF
-$color-acento-botones: #FFC727
+$color-primario: #FF4B52
+$color-secundario: #DDFFA7
+$color-acento-contenido: #004046
+$color-acento-botones: #FFC935
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
